Fixed the layout issues. Interface now scrolls AND resizes properly.

--- a/static/style.css
+++ b/static/style.css
@@ -1,17 +1,22 @@
+body {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    margin: 0px;
+}
 
 .message {
     border-top: 1px solid lightgray;
+    padding-left: 1em;
 }
 
 .server-message{
     background: #eeeeee;
 }
 .messages {
-    height: 100%;
-    padding-left: 1em;
     padding-top: 5px;
     border: gray 1px solid;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .textinput {
@@ -19,21 +24,28 @@
 }
 
 #wrapper {
-    display: table;
     width: 100%;
     height: 100%;
 }
 
 #username_area {
-    display: table-row;
+    position: fixed;
+    top: 0;
+    height: 50px;
+    width: 100%;
 }
 
 #msgbox {
-    display: table-row;
-    height: 100%;
-    overflow-y: scroll;
+    top: 50px;
+    bottom: 100px;
+    position: fixed;
+    width: 100%;
 }
 
 #message_area {
-    display: table-row;
+    position: fixed;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    
 }
